# homework10

MyNote/: pyproject.toml
MyNote/pw1410/: pyproject.toml
MyNote/testnotes/: env.py  manage.py
MyNote/testnotes/noteapp/: forms.py  models.py  urls.py  views.py
MyNote/testnotes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py  0003_publicnote.py
MyNote/testnotes/noteapp/templates/noteapp/: add_quote.html  all_quotes.html  base.html  detail.html  index.html  note.html  tag.html
MyNote/testnotes/testnotes/: asgi.py  settings.py  urls.py  wsgi.py
MyNote/testnotes/users/: forms.py  views.py
MyNote/testnotes/users/migrations/: 0001_initial.py
MyNote/testnotes/users/templates/users/: login.html  profile.html  signup.html
